<resources>

    <color name="chocolate">#322b28</color>
    <color name="light_chocolate">#574234</color>
    <color name="coffee">#a6937c</color>

    <string name="app_name">Lecture Survey</string>
    <string name="fill_out_answer1">그렇다</string>
    <string name="fill_out_answer2">보통이다</string>
    <string name="fill_out_answer3">아니다</string>

    <string name="choice">선택</string>
    <string name="photo_attach">사진 첨부</string>
    <string name="lecture_name">강의명</string>
    <string name="lecture_dept">강의 학과</string>
    <string name="lecture_date">강의일</string>
    <string name="survey_msg">설문 메세지</string>
    <string name="prof_name">교수님</string>
    <string name="survey_start">설문시작</string>
    <string name="survey_end">설문종료</string>
    <string name="survey_delete">설문지 삭제</string>
    <string name="manage_question">질문 관리</string>
    <string name="question">질문</string>
    <string name="reg_question">질문 등록</string>
    <string name="delete">삭제</string>
    <string name="menu">메뉴</string>
    <string name="result">결과</string>
    <string name="survey_result">설문결과</string>
    <string name="survey_respondents">설문 참여자</string>
    <string name="survey_respondent_count">설문응답수</string>
    
    
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="name">이름</string>
    <string name="deptname">학과명</string>
    <string name="studentID">학번</string>
    <string name="email">이메일</string>
    <string name="password">패스워드</string>
    <string name="bun">번</string>
    
    
    <string name="alert_msg_lecture_date">강의일을 선택해주세요.</string>
    <string name="alert_msg_connection">접속이 원할하지 않습니다. 다시 시도 할까요?!</string>
    <string name="alert_msg_survey_ready">설문이 준비중입니다.</string>
    <string name="alert_msg_survey_ended">설문이 종료되었습니다.</string>
    <string name="alert_msg_survey_fillout_endded">모든 설문에 응답하였습니다.\n감사합니다.</string>
    
    <string name="alert_msg_survey_delete_confirm">설문을 정말로 삭제 할까요?</string>
    <string name="alert_msg_survey_start_confirm">설문을 시작 할까요?</string>
    <string name="alert_msg_survey_end_confirm">설문을 종료 할까요?</string>
    
    <string name="popup_alert_title_info">확인</string>

    <string name="success_save">저장 되었습니다.</string>
    
    <string name="error_msg_email">이메일이 잘못 되었습니다.</string>
    <string name="error_msg_pw">패스워드가 잘못 되었습니다. 6자리 이상 입력하세요.</string>
    <string name="error_msg_name">이름이 잘못 되었습니다.</string>
    <string name="error_msg_deptName">학과명이 잘못 되었습니다.</string>
    <string name="error_msg_studentID">학번이 잘못 되었습니다.</string>
    <string name="error_msg_lectureName">강의명이 잘못 되었습니다.</string>
    <string name="error_msg_lectureDate">강의일이 잘못 되었습니다.</string>
    <string name="error_msg_question">질문이 잘못 되었습니다.</string>
    <string name="hint_reg_survey_msg">(생략가능)\n간단한 설문 목적이나 설명을 입력할 수 있습니다.</string>
    <string name="hint_reg_survey_item_msg">질문 내용을 입력해주세요.</string>
    
</resources>