<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/fill_out_survey_tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/chocolate"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fill_out_survey_layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/fill_out_survey_btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_selector"
            android:drawableLeft="@drawable/ic_star"
            android:drawablePadding="3dp"
            android:text="@string/fill_out_answer1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/fill_out_survey_btnNeither"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_selector"
            android:drawableLeft="@drawable/ic_star"
            android:drawablePadding="3dp"
            android:text="@string/fill_out_answer2"
            android:textSize="16sp" />

        <Button
            android:id="@+id/fill_out_survey_btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_selector"
            android:drawableLeft="@drawable/ic_star"
            android:drawablePadding="3dp"
            android:text="@string/fill_out_answer3"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>